Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79565

Mac: Emoji Picker shortcut (Ctrl + Cmd + Space) doesn't work in QML TextEdit

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.3.0 Alpha, 6.3
    • 5.12.5, 6.2.0
    • Quick: Controls 2
    • None
    • MacOS 10.15
      Qt 5.12.5
    • macOS
    • d42cfeb84faf154b46f2811b2059946b396fcc12 (qt/tqtc-qtbase/dev), 9618427ee (dev), d2046cea5 (6.5), a92c202b4 (dev), ca1ff5f48 (6.5)

    Description

      Emoji Picker doesn't appear in Quick controls: TextEdit, TextField or TextInput.

      It works in Qt Creator, BUT only if English language is selected in UI. If you set Qt Creator to Russian - it stops working.

      In localized applications it's unacceptable to have a dedicated menu with title "Edit" in English just to have Emoji & Symbols shortcut enabled.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-79565
          # Subject Branch Project Status CR V

          Activity

            People

              vestbo Tor Arne Vestbø
              sergei.nevdakh Sergei Nevdakh
              Votes:
              1 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: